Preparing a conversation system with lua for complex dialogs I'm looking for flexibility and there's such a thing

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ Gamecore/build/Makefile
 Gamecore/build/CMakeFiles/
 Gamecore/intermediate/
 Gamecore/build/data/
+.vs/
+Gamecore/build/LuaVermelha.data
+Gamecore/build/LuaVermelha.html
+Gamecore/build/LuaVermelha.js
+Gamecore/build/LuaVermelha.wasm
