Major Groundwork: - Repurpoused the whole game states to be handled as Game Scenes - FSM (Finite Scene Manager) controls each scene Init, Deinit, Update & Render - Each Scene will contain a bunch a entities, where each one of them loads their own script. - These scripts will be in charge of general setup data and specific bahavior logic for each entity. - Entity cpp class should be generic enough so each entity type will be definied by the script it contains + Added a logic in MakeLists so we automatically duplicate the data folder contents in the target build folder + HOWEVER also added a path string append function to help checking lua scripts updates in the root folder THIS WILL BE DISABLED FOR ANYTHING BUT INCREMENTAL MSVC DEBUG BUILDS

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Gamecore/build/LuaVermelha.data
 Gamecore/build/LuaVermelha.html
 Gamecore/build/LuaVermelha.js
 Gamecore/build/LuaVermelha.wasm
+Gamecore/source/Lua/Lua.zip
